# assessment_winter_2026

./: README.md
.github/workflows/: ci.yml
assignment_1/: .clang-format  CMakeLists.txt  README.md
assignment_1/include/rmproto/: frame.hpp
assignment_1/src/: frame.cpp
assignment_1/tests/: frame_tests.cpp
